K8S/todoback-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Work\go-to-do-app\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  #creationTimestamp: null
  labels:
    io.kompose.service: todoback
  name: todoback
spec:
  type: NodePort
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: todoback
status:
  loadBalancer: {}
