K8S/todofront-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Work\go-to-do-app\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  #creationTimestamp: null
  labels:
    io.kompose.service: todofront
  name: todofront
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: todofront
status:
  loadBalancer: {}
